fix logo alignment

--- a/source/_src/less/atoms/type.less
+++ b/source/_src/less/atoms/type.less
@@ -58,7 +58,7 @@ blockquote {
     margin-bottom: floor(@line-height-computed * 2.3);
     font-size: @blockquote-font-size;
     padding-left: 60px;
-    margin-left: -57px;
+    margin-left: -58px;
   }
 }
 
