--- a/source/_src/less/organisms/header.less
+++ b/source/_src/less/organisms/header.less
@@ -4,6 +4,7 @@
   font-family: @font-family-secondary;
   font-weight: 800;
   font-size: @font-size-small;
+  height: 54px;
 
   a {
     text-decoration: none;
