--- a/source/_src/less/organisms/sections.less
+++ b/source/_src/less/organisms/sections.less
@@ -134,6 +134,8 @@
   @media (min-width: @screen-md-min) {
     &.section--offset .section__wrapper {
       .make-md-column(7);
+      padding-left: 0;
+      padding-right: 0;
 
       .preview__description {
         .make-md-column(3);
